Add getPaySlip by UserId
