# src/routes/pay-slip.route.ts
@@ -8,5 +8,6 @@ router.get('/pay-slips/:id', paySlipController.getPaySlip);
 router.patch('/pay-slips/:id', paySlipController.updatePaySlip);
 router.delete('/pay-slips/:id', paySlipController.deletePaySlip);
 router.post('/pay-slips/upload', validateFile, paySlipController.uploadPaySlip);
+router.get('/users/:id/pay-slips', paySlipController.getPaySlipsByUserId);
 
 export default router;
